# deep-learning-project

./: .gitignore  data_midi.mid  rw_guitar_chords_test.ipynb  setup.sh
audio_samples_py/: Cargo.toml  pyproject.toml
audio_samples_py/audio_samples_py/: __init__.py  audio_samples_py.pyi
audio_samples_py/src/: lib.rs
deep-learning/: 4.2-EXE-CNN-CIFAR-10.ipynb  README.md  chord_test.ipynb  chord_test_with_notes.ipynb  chord_tone_test.ipynb  eval_data.csv  examine_model.ipynb  hpc_script.py  model.py  predict_note.ipynb  rw_guitar_chords_test.ipynb  rw_synth_chords_test.ipynb  rw_synth_test.ipynb  rw_test.ipynb  simple.ipynb  synth_to_rw.ipynb  test.ipynb  tutorial.ipynb  utils.py
deep-learning/data/: createShortGuitarSamplesAndJason.py
deep-learning/data/sampled_strings/: labels.json
deep-learning/data/short_guitar_samples/: _labels.json
deep-learning/data/synth_chord_data/: _labels.json
deep-learning/data/synth_data/: _labels.json  labels.json
deep-learning/data/synth_data_chords/: _labels.json  labels.json
deep-learning/utils/: criterion.py  plots.py  utils.py
