[package]
name = "audio_samples_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "audio_samples_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
audio_samples = { git = "https://github.com/albertsgarde/audio-samples.git" }
numpy = "0.17"
ndarray = "0.15.6"
