[package]
name = "audio_samples_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "audio_samples_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "anyhow"] }
#audio_samples = { git = "https://github.com/albertsgarde/audio-samples.git" }
audio_samples = { path = "../../../../Fun/Rust/audio_samples" }
numpy = "0.17"
rand = "0.8.5"
ndarray = "0.15.6"
anyhow = "1.0.65"
